@@ -1,9 +1,94 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.1.5</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
   <groupId>deploy.demo</groupId>
   <artifactId>deploy-demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Archetype - deploy-demo</name>
+  <packaging>pom</packaging>
+
+  <modules>
+    <module>microservice1</module>
+    <module>microservice2</module>
+  </modules>
+
+  <name>deploy-demo</name>
+  <description>Parent project</description>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <docker.registry>deploydemo.jfrog.io</docker.registry>
+    <docker.repo>docker</docker.repo>
+    <image.version>1.0</image.version>
+
+    <!-- to enable jib for CI builds (or testing): -Djib.skip -->
+    <jib.skip>true</jib.skip>
+  </properties>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.google.cloud.tools</groupId>
+          <artifactId>jib-maven-plugin</artifactId>
+          <version>3.3.2</version>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>build</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <from>
+              <image>${docker.registry}/library/eclipse-temurin:17</image>
+              <auth>
+                <!-- only meant to be used in CI environments, settings.xml creds can be used locally -->
+                <username>${env.ARTIFACTORY_AUTH_USR}</username>
+                <password>${env.ARTIFACTORY_AUTH_PSW}</password>
+              </auth>
+            </from>
+            <to>
+              <image>${docker.registry}/${docker.repo}/${project.artifactId}:${image.version}</image>
+              <auth>
+                <!-- only meant to be used in CI environments, settings.xml creds can be used locally -->
+                <username>${env.ARTIFACTORY_AUTH_USR}</username>
+                <password>${env.ARTIFACTORY_AUTH_PSW}</password>
+              </auth>
+            </to>
+            <container>
+              <jvmFlags>
+                <jvmFlag>-XX:+ExitOnOutOfMemoryError</jvmFlag>
+                <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
+                <jvmFlag>-XX:+UseZGC</jvmFlag>
+                <jvmFlag>-XX:MinRAMPercentage=50</jvmFlag>
+                <jvmFlag>-XX:MaxRAMPercentage=50</jvmFlag>
+                <jvmFlag>-XX:+PrintFlagsFinal</jvmFlag>
+                <jvmFlag>-XX:MaxJavaStackTraceDepth=0</jvmFlag>
+                <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+                <jvmFlag>-Dsun.net.inetaddr.ttl=0</jvmFlag>
+              </jvmFlags>
+              <ports>
+                <port>8080</port>
+                <port>8443</port>
+              </ports>
+            </container>
+          </configuration>
+        </plugin>
+
+      </plugins>
+    </pluginManagement>
+    <plugins>
+
+
+    </plugins>
+  </build>
+
 </project>
